# 3D-Engine

./: CMakeLists.txt  LICENSE  README.md
dep/SDL2/: CMakeLists.txt
dep/SDL2/include/SDL/: SDL.h  SDL_config.h
dep/SDL2/src/events/: SDL_touch_c.h  scancodes_linux.h  scancodes_windows.h  scancodes_xfree86.h
dep/SDL2/src/ttf/: SDL_ttf.c  glfont.c
dep/SDL2/src/video/haiku/: SDL_bkeyboard.h
dep/freetype/: CMakeLists.txt
dep/freetype/include/freetype/: freetype.h
src/: Main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Drawing/: Draws.cpp  Draws.h
src/Engine/: Engine.cpp  Engine.h
src/Miscellaneous/: Structures.cpp  Structures.h
src/World/: World.cpp  World.h
